# SimpleImgProcess

./: .gitignore  README.md
src/: makefile  test.cpp
src/core/: binaryImage.cpp  binaryImage.h  colorTrans.cpp  colorTrans.h  geometry.cpp  geometry.h  image.cpp  image.h  imageOpt.cpp  imageOpt.h  makefile  zoneSplit.cpp
src/io/: bitOpt.cpp  bitOpt.h  makefile  readBMP.cpp  readBMP.h  readJPEG.cpp  readJPEG.h
visualize/: CMakeLists.txt
visualize/app/: girdWindow.cpp  gridFormat.cpp  gridFormat.h  gridWindow.h  imgEventHandler.cpp  imgEventHandler.h  imgModelWrapper.cpp  imgModelWrapper.h  main.cpp  widgetMaker.cpp  widgetMaker.h
visualize/app/myWidgets/: imageDisplay.cpp  imageDisplay.h  toolGraph.h
visualize/fltk-dist-1.3.8/lib/Release/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_z.lib
